<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearViewGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:context=".fragment.animatedrawable.AnimateDrawableFragment">

        <ImageButton
            android:id="@+id/imageBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/popBackImage"
            app:srcCompat="@drawable/ic_round_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/animate_drawable_graphic"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageAnimationDrawable"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/imageAnimatorVectorDrawable"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name" />


    </LinearLayout>

</layout>