<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".fragment.HomeFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="58dp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/matPropertyAnimation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/property_animation"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/matAnimateDrawable"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Animate Drawable"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </com.google.android.material.card.MaterialCardView>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/matRevealOrHideAnimation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/reveal_hide_view"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/matMoveViewUsingAnimation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Move a view"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </com.google.android.material.card.MaterialCardView>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/matZoomAnimation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Zoom animation"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mat..."
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="..."
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </com.google.android.material.card.MaterialCardView>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>